tests/fail/w001_fnonce_leak.dew
# D002: affine Box captured by closure, closure never called
def main = fn () {
    def b = box(42);
    def reader = fn (x: Int) { unbox(b) };
    0
}
